@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
   
+  25 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Fixed set_additional_users()
+
   22 Jan 2005; Preston Cody <codeman@gentoo.org>
   Finished initital coding of additional_users. more text detail.
 
